Still trying to get output edited records to work

--- a/datatableLwcFsc/force-app/main/default/classes/SObjectController.cls
+++ b/datatableLwcFsc/force-app/main/default/classes/SObjectController.cls
@@ -124,7 +124,7 @@ public with sharing class SObjectController {
                 }
             }
         }
-        // System.debug('records: ' + JSON.serializePretty(records));
+        System.debug('records: ' + JSON.serializePretty(records));
         return records;
     }
 
