--- a/datatableLwcFsc/force-app/main/default/classes/SObjectController.cls
+++ b/datatableLwcFsc/force-app/main/default/classes/SObjectController.cls
@@ -13,7 +13,7 @@
  *              of the Name fields in the corresponding records. Return the
  *              records that now include both the Id and Name for each lookup.
  * 
- * xx/xx/20 -   Eric Smith -    Version 1.0
+ * 04/01/20 -   Eric Smith -    Version 1.0
  * 
  **/
 
