--- a/Apex-Defined Example/SampleClassDescriptor.cls
+++ b/Apex-Defined Example/SampleClassDescriptor.cls
@@ -1,79 +1,22 @@
-/** 
- * 
- *  Sample Apex Class Template to get data from a Flow, 
- *  Process the data, and Send data back to the Flow
- * 
- *  This example translates an Apex-Defined Variable 
- *  between a Collection of Object Records and a Seraialized String
- * 
- *  Eric Smith - May 2020
- * 
- * 
-**/ 
+// Apex-Defined Variable Sample Descriptor Class
+public with sharing class SampleClassDescriptor {
 
-public with sharing class TranslateApexDefinedRecords {
+    // @AuraEnabled annotation exposes the methods to Lightning Components and Flows
+    @AuraEnabled
+    public String field1;
 
-    // Attributes passed in from the Flow
-    public class Requests {
-    
-        @InvocableVariable(label='Input Record String')
-        public String inputString;
+    @AuraEnabled
+    public String field2;
 
-        @InvocableVariable(label='Input Record Collection')
-        public List<SampleClassDescriptor> inputCollection;
-
+    // Define the structure of the Apex-Defined Variable
+    public SampleClassDescriptor(
+            String field1,
+            String field2
+    ) {
+        this.field1 = field1;
+        this.field2 = field2;
     }
 
-    // Attributes passed back to the Flow
-    public class Results {
-
-        @InvocableVariable
-        public String outputString;
-
-        @InvocableVariable
-        public List<SampleClassDescriptor> outputCollection;
-    }
-
-    // Expose translateApexDefinedRecords to the Flow
-    @InvocableMethod
-    public static List<Results> translateADR(List<Requests> requestList) {
-
-        // Instantiate the record collection
-        List<SampleClassDescriptor> tcdList = new List<SampleClassDescriptor>();
-
-        // Prepare the response to send back to the Flow
-        Results response = new Results();
-        List<Results> responseWrapper = new List<Results>();
-
-        // Bulkify proccessing of multiple requests
-        for (Requests req : requestList) {
-
-            // Get Input Value(s)
-            String inputString = req.inputString;
-            tcdList = req.inputCollection;
-
-
-// Processing Code Goes Here +++++++++++++++++++++++++++++++++++++++++++++++++++++
-
-            // Convert Serialized String to Record Collection
-            List<SampleClassDescriptor> collectionOutput = new List<SampleClassDescriptor>();
-            if (inputString != null && inputString.length() > 0) {
-                collectionOutput = (List<SampleClassDescriptor>)System.JSON.deserialize(inputString, List<SampleClassDescriptor>.class);
-            }
-
-            // Convert Record Collection to Serialized String
-            String stringOutput = JSON.serialize(tcdList);
-
-// Processing Code Goes Here +++++++++++++++++++++++++++++++++++++++++++++++++++++
-
-
-            // Set Output Values
-            response.outputString = stringOutput;
-            response.outputCollection = collectionOutput;
-            responseWrapper.add(response);
-
-        }
-        // Return values back to the Flow
-        return responseWrapper;
-    }
+    // Required no-argument constructor
+    public SampleClassDescriptor() {}
 }
